manifests/node-red/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: node-red
  labels:
    gateway: private
    app: node-red
spec:
  hostnames:
    - node-red.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: node-red
          port: 1880
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: node-red-api
  labels:
    gateway: private
    app: node-red
spec:
  hostnames:
    - node-red.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: node-red
          port: 1880
