manifests/node-red/base/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: node-red
  labels:
    app: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      securityContext:
        fsGroup: 2000
      containers:
        - name: node-red
          image: "ghcr.io/x-real-ip/node-red:latest"
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
          resources: {}
          ports:
            - containerPort: 1880
              protocol: TCP
          volumeMounts:
            - name: node-red-data
              mountPath: /data
      volumes:
        - name: node-red-data
          persistentVolumeClaim:
            claimName: pvc-nfs-node-red-data
      imagePullSecrets:
        - name: github-registry-creds

---
kind: Service
apiVersion: v1
metadata:
  name: node-red
  labels:
    app: node-red
spec:
  selector:
    app: node-red
  type: ClusterIP
  ports:
    - port: 1880
      protocol: TCP
      targetPort: 1880
  sessionAffinity: None

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: node-red
  labels:
    gateway: private
    app: node-red
spec:
  hostnames:
    - node-red.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: node-red
          port: 1880
